force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/XactlyExpress__XCProfileCurrency__c.object-meta.xml
<CustomObject>
    <label>XCProfileCurrency</label>
    <nameField>
        <label>XCProfileCurrency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCProfileCurrencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>