force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/fields/XactlyExpress__ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ConversionRate__c</fullName>
    <label>ConversionRate</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>