force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/fields/XactlyExpress__IgnoreCurrencyChanges__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IgnoreCurrencyChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IgnoreCurrencyChanges</label>
    <type>Checkbox</type>
</CustomField>