force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/fields/XactlyExpress__OldCurrency__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OldCurrency__c</fullName>
    <label>OldCurrency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>