force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/fields/XactlyExpress__PeriodID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PeriodID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PeriodID</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCProfileCurrencies</relationshipLabel>
    <relationshipName>XCProfileCurrencies</relationshipName>
    <type>Lookup</type>
</CustomField>