force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/fields/XactlyExpress__UniqueID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__UniqueID__c</fullName>
    <externalId>true</externalId>
    <label>UniqueID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>