force-app/main/default/objects/XactlyExpress__XCProfileCurrency__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <columns>NAME</columns>
    <columns>XactlyExpress__MultiCurrencySupport__c</columns>
    <columns>XactlyExpress__PeriodID__c</columns>
    <columns>XactlyExpress__ProfileID__c</columns>
    <columns>XactlyExpress__Currency__c</columns>
    <columns>XactlyExpress__IgnoreCurrencyChanges__c</columns>
    <columns>XactlyExpress__ConversionRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>